Asset Manager Navbar + Routing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-dark" style="margin-top: 80px" id="projects">
   <div class="row">
     <div class="col-lg-4 p-0">
-      <a routerLink="/dog-database-app">
+      <a routerLink="/asset-manager">
         <img src="/assets/Test1.png" class="img-fluid x-axis-scale">
       </a>
     </div>
