Navbar Adjusted + Computer Model and Service + Owner Model

--- a/src/app/demo/asset-manager/asset-manager-navbar/asset-manager-navbar-options/asset-manager-navbar-options.component.html
+++ b/src/app/demo/asset-manager/asset-manager-navbar/asset-manager-navbar-options/asset-manager-navbar-options.component.html
@@ -1,7 +1,20 @@
 <div class="collapse" id="assetNavbarOptions">
-  <div id="options-sidebar" class="bg-dark p-4">
-    <h5 class="text-white h4">
-      Test
-    </h5>
+  <div id="options-sidebar" style="background-color:#393d4f !important;" class="bg-dark p-4">
+    <ul id="options" class="list-unstyled components">
+      <li><a href="">Home</a></li>
+      <li><a href="">Announcements</a></li>
+      <li><a href="">Cooperation</a></li>
+      <li><a href="">Environments</a></li>
+      <li><a href="">Workspaces</a></li>
+      <li><a href="">Complex systems</a></li>
+      <li><a href="">Inventory items</a></li>
+      <li><a href="">End devices</a></li>
+      <li><a href="">Peripheral devices</a></li>
+      <li><a href="">SIM Cards</a></li>
+      <li><a href="">Network devices</a></li>
+      <li><a href="">Universal asset</a></li>
+      <li><a href="">Reports</a></li>
+      <li><a href="">Settings</a></li>
+    </ul>
   </div>
 </div>
