--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,6 @@ body::-webkit-scrollbar-thumb{
   background-color: var(--bs-dark);
   border-radius: 100px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
