--- a/src/app/demo/asset-manager/asset-manager-computer/asset-manager-computer.component.html
+++ b/src/app/demo/asset-manager/asset-manager-computer/asset-manager-computer.component.html
@@ -1,27 +1,22 @@
 <div id="content" class="d-flex flex-column justify-content-center align-items-center">
-  <table>
-    <thead>
-    <th>Name</th>
-    <th>Serial Number</th>
-    <th>Manufacturer</th>
-    <th>Property</th>
-    </thead>
-    <tbody>
-    <tr *ngFor="let computer of computers | paginate : {
-    itemsPerPage: 10,
-    currentPage: page,
-    totalItems: computers.length
-    };">
-      <td>{{computer.name}}</td>
-      <td>{{computer.serial_number}}</td>
-      <td>{{computer.manufacturer}}</td>
-      <td>{{computer.model}}</td>
-    </tr>
-    </tbody>
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let computer">{{computer.name}}</td>
+    </ng-container>
+    <ng-container matColumnDef="serial-number">
+      <th mat-header-cell *matHeaderCellDef>Serial Number</th>
+      <td mat-cell *matCellDef="let computer">{{computer.serial_number}}</td>
+    </ng-container>
+    <ng-container matColumnDef="manufacturer">
+      <th mat-header-cell *matHeaderCellDef>Manufacturer</th>
+      <td mat-cell *matCellDef="let computer">{{computer.manufacturer}}</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
   </table>
-  <pagination-controls (pageChange)="handlePageChange($event)">
-    previousLabel="Prev"
-    nextLabel="Next"
-    responsive="true"
-  </pagination-controls>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+  showFirstLastButtons
+  >
+  </mat-paginator>
 </div>
