Added Columns to table

--- a/src/app/demo/asset-manager/asset-manager.component.html
+++ b/src/app/demo/asset-manager/asset-manager.component.html
@@ -5,7 +5,7 @@
     <mat-sidenav #sidenav style="background-color:#393d4f !important;" position="start" mode="side">
       <app-asset-manager-navbar-options></app-asset-manager-navbar-options>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content class="d-flex justify-content-center">
       <router-outlet></router-outlet>
     </mat-sidenav-content>
     <mat-sidenav #rightNav style="background-color:#393d4f !important;" position="end" mode="over">
