--- a/src/app/demo/asset-manager/asset-manager-computer/asset-manager-computer.component.css
+++ b/src/app/demo/asset-manager/asset-manager-computer/asset-manager-computer.component.css
@@ -1,6 +1,3 @@
-.mat-column-name{
-
-}
 .mat-mdc-row .mat-mdc-cell {
   border-bottom: 1px solid transparent;
   border-top: 1px solid transparent;
@@ -8,4 +5,10 @@
 }
 .mat-mdc-row:hover .mat-mdc-cell {
   font-weight: bold;
+}
+#content{
+  margin-top: 40px;
+}
+#computer-table, #computer-table-paginator{
+  background-color:#393d4f !important;
 }
