--- a/src/app/demo/asset-manager/asset-manager-computer/asset-manager-computer.component.html
+++ b/src/app/demo/asset-manager/asset-manager-computer/asset-manager-computer.component.html
@@ -1,5 +1,5 @@
 <div id="content" class="d-flex flex-column justify-content-center align-items-center">
-  <table mat-table [dataSource]="dataSource">
+  <table id="computer-table" mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let computer">{{computer.name}}</td>
@@ -12,11 +12,29 @@
       <th mat-header-cell *matHeaderCellDef>Manufacturer</th>
       <td mat-cell *matCellDef="let computer">{{computer.manufacturer}}</td>
     </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <td mat-cell *matCellDef="let computer">{{computer.status}}</td>
+    </ng-container>
+    <ng-container matColumnDef="operational-system">
+      <th mat-header-cell *matHeaderCellDef>Operational System</th>
+      <td mat-cell *matCellDef="let computer">{{computer.operation_system}}</td>
+    </ng-container>
+    <ng-container matColumnDef="location">
+      <th mat-header-cell *matHeaderCellDef>Location</th>
+      <td mat-cell *matCellDef="let computer">{{computer.location}}</td>
+    </ng-container>
+    <ng-container matColumnDef="owner">
+      <th mat-header-cell *matHeaderCellDef>Owner</th>
+      <td mat-cell *matCellDef="let computer">{{computer.owner.first_name + " " + computer.owner.last_name}}</td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-  showFirstLastButtons
+  <mat-paginator id="computer-table-paginator"
+                 [hidePageSize]="true"
+                 pageSize="10"
+                 showFirstLastButtons
   >
   </mat-paginator>
 </div>
