Form Design Changed

--- a/src/app/demo/asset-manager/asset-manager-navbar/asset-manager-navbar-add/asset-manager-navbar-add.component.html
+++ b/src/app/demo/asset-manager/asset-manager-navbar/asset-manager-navbar-add/asset-manager-navbar-add.component.html
@@ -1,6 +1,30 @@
 <div id="options-sidebar" style="background-color:#393d4f !important;" class="bg-dark p-4">
-  <ul id="options" class="list-unstyled components">
-    <li>Test</li>
-  </ul>
-</div>
+  <form class="container">
 
+    <div class="row">
+      <mat-form-field class="col">
+        <mat-label>Name</mat-label>
+        <input matInput placeholder="(Computer-Name)" required>
+      </mat-form-field >
+      <mat-form-field class="col">
+        <mat-label>Serial Number</mat-label>
+        <input matInput placeholder="(Serial-Number)" required>
+      </mat-form-field>
+    </div>
+    <div class="row">
+      <mat-form-field class="col">
+        <mat-label>Owner ID</mat-label>
+        <input matInput placeholder="(Owner-Id)" required>
+      </mat-form-field>
+      <mat-form-field class="col">
+        <mat-label>Status</mat-label>
+        <input matInput placeholder="(Computer-Status)" required  >
+      </mat-form-field >
+    </div>
+
+
+
+
+
+  </form>
+</div>
