--- a/src/app/demo/asset-manager/asset-manager-navbar/asset-manager-navbar-add/asset-manager-navbar-add.component.html
+++ b/src/app/demo/asset-manager/asset-manager-navbar/asset-manager-navbar-add/asset-manager-navbar-add.component.html
@@ -1,30 +1,25 @@
 <div id="options-sidebar" style="background-color:#393d4f !important;" class="bg-dark p-4">
-  <form class="container">
-
+  <form #addComputerForm="ngForm" (ngSubmit)="onAddComputer(addComputerForm)">
     <div class="row">
-      <mat-form-field class="col">
+      <mat-form-field class="form-group col">
         <mat-label>Name</mat-label>
-        <input matInput placeholder="(Computer-Name)" required>
-      </mat-form-field >
-      <mat-form-field class="col">
+        <input name="name" ngModel matInput placeholder="(Computer-Name)" required>
+      </mat-form-field>
+      <mat-form-field class="form-group col">
         <mat-label>Serial Number</mat-label>
-        <input matInput placeholder="(Serial-Number)" required>
+        <input name="serial_number" ngModel matInput placeholder="(Serial-Number)" required>
       </mat-form-field>
     </div>
     <div class="row">
-      <mat-form-field class="col">
-        <mat-label>Owner ID</mat-label>
-        <input matInput placeholder="(Owner-Id)" required>
-      </mat-form-field>
-      <mat-form-field class="col">
+      <mat-form-field class="form-group col">
         <mat-label>Status</mat-label>
-        <input matInput placeholder="(Computer-Status)" required  >
+        <input name="status" ngModel matInput placeholder="(Computer-Status)" required  >
+      </mat-form-field >
+      <mat-form-field class="form-group col">
+        <mat-label>Owner</mat-label>
+        <input name="owner_id" ngModel matInput placeholder="(Owner-ID)" required  >
       </mat-form-field >
     </div>
-
-
-
-
-
+    <button [disabled]="addComputerForm.invalid" type="submit"></button>
   </form>
 </div>
