Added Button Styling on Add Asset Computer without Owner are now also displayed on the table

--- a/src/app/demo/asset-manager/asset-manager-navbar/asset-manager-navbar-add/asset-manager-navbar-add.component.css
+++ b/src/app/demo/asset-manager/asset-manager-navbar/asset-manager-navbar-add/asset-manager-navbar-add.component.css
@@ -10,3 +10,25 @@
   text-decoration: none;
   text-align: center;
 }
+#submit-button{
+  background-color: orange;
+  color: white;
+  border: none;
+  border-radius: 16px;
+  padding: 8px 16px;
+  width: 100px;
+  cursor: pointer;
+  transition: opacity 0.15s;
+}
+#submit-button:disabled{
+  opacity: 0.5;
+}
+#submit-button:disabled:hover{
+  opacity: 0.5;
+}
+#submit-button:hover{
+  opacity: 0.7;
+}
+#submit-button:active{
+  opacity: 0.5;
+}
