--- a/src/app/demo/asset-manager/asset-manager-computer/asset-manager-computer.component.html
+++ b/src/app/demo/asset-manager/asset-manager-computer/asset-manager-computer.component.html
@@ -26,7 +26,7 @@
     </ng-container>
     <ng-container matColumnDef="owner">
       <th mat-header-cell *matHeaderCellDef>Owner</th>
-      <td mat-cell *matCellDef="let computer">{{computer.owner.first_name + " " + computer.owner.last_name}}</td>
+      <td mat-cell *matCellDef="let computer">{{computer.owner ? computer.owner.first_name + " " + computer.owner.last_name : " Unassigned "}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
