--- a/src/app/demo/asset-manager/content/assets/assets.component.html
+++ b/src/app/demo/asset-manager/content/assets/assets.component.html
@@ -2,31 +2,31 @@
   <table id="computer-table" mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let computer">{{computer.name}}</td>
+      <td mat-cell *matCellDef="let computer" [routerLink]="['/asset-manager/computer', computer.id]">{{computer.name}}</td>
     </ng-container>
     <ng-container matColumnDef="serial-number">
       <th mat-header-cell *matHeaderCellDef>Serial Number</th>
-      <td mat-cell *matCellDef="let computer">{{computer.serial_number}}</td>
+      <td mat-cell *matCellDef="let computer" [routerLink]="['/asset-manager/computer', computer.id]">{{computer.serial_number}}</td>
     </ng-container>
     <ng-container matColumnDef="manufacturer">
       <th mat-header-cell *matHeaderCellDef>Manufacturer</th>
-      <td mat-cell *matCellDef="let computer">{{computer.manufacturer}}</td>
+      <td mat-cell *matCellDef="let computer" [routerLink]="['/asset-manager/computer', computer.id]">{{computer.manufacturer}}</td>
     </ng-container>
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let computer">{{computer.status}}</td>
+      <td mat-cell *matCellDef="let computer" [routerLink]="['/asset-manager/computer', computer.id]">{{computer.status}}</td>
     </ng-container>
     <ng-container matColumnDef="operational-system">
       <th mat-header-cell *matHeaderCellDef>Operational System</th>
-      <td mat-cell *matCellDef="let computer">{{computer.operation_system}}</td>
+      <td mat-cell *matCellDef="let computer" [routerLink]="['/asset-manager/computer', computer.id]">{{computer.operation_system}}</td>
     </ng-container>
     <ng-container matColumnDef="location">
       <th mat-header-cell *matHeaderCellDef>Location</th>
-      <td mat-cell *matCellDef="let computer">{{computer.location}}</td>
+      <td mat-cell *matCellDef="let computer" [routerLink]="['/asset-manager/computer', computer.id]">{{computer.location}}</td>
     </ng-container>
     <ng-container matColumnDef="owner">
       <th mat-header-cell *matHeaderCellDef>Owner</th>
-      <td mat-cell *matCellDef="let computer">{{computer.owner ? computer.owner.first_name + " " + computer.owner.last_name : " Unassigned "}}</td>
+      <td mat-cell *matCellDef="let computer" [routerLink]="['/asset-manager/computer', computer.id]">{{computer.owner ? computer.owner.first_name + " " + computer.owner.last_name : " Unassigned "}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: columnsToDisplay"></tr>
