--- a/src/app/demo/asset-manager/content/computer/computer.component.html
+++ b/src/app/demo/asset-manager/content/computer/computer.component.html
@@ -1,5 +1,6 @@
+<h2 class="text-center">Computer Name: {{computer.name}}</h2>
 <form id="computerEditForm" #computerEditForm="ngForm">
-  <div class="d-flex flex-row">
+  <div class="d-flex flex-row mt-5 mb-5">
     <div>
       <mat-card>
         <mat-card-content class="bg-light d-flex justify-content-center flex-column">
@@ -96,7 +97,7 @@
           </mat-form-field>
           <mat-form-field>
             <mat-label>End Of Operation</mat-label>
-            <input matInput [matDatepicker]="picker" value="{{computer.end_of_operation}}">
+            <input matInput [matDatepicker]="picker" [value]="endOfOperation">
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
@@ -104,7 +105,7 @@
       </mat-card>
     </div>
   </div>
-  <div>
+  <div class="mt-5 mb-5">
     <mat-card>
       <mat-card-content class="bg-light d-flex justify-content-center flex-column">
         <h3>Identification</h3>
@@ -143,7 +144,7 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <div>
+  <div class="mt-5 mb-5">
     <mat-card>
       <mat-card-content class="bg-light d-flex justify-content-center flex-column">
         <h3>Hardware</h3>
@@ -157,7 +158,7 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>Year Of Manufacturer</mat-label>
-          <input matInput [matDatepicker]="picker" value="{{computer.year_of_manufacturer}}">
+          <input matInput [matDatepicker]="picker" [value]="yearOfManufacture">
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
