--- a/src/app/demo/asset-manager/content/computer/computer.component.html
+++ b/src/app/demo/asset-manager/content/computer/computer.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center">Computer Name: {{computer.name}}</h2>
+<h2 id="headComputerName" class="text-center">Computer Name: </h2>
 <form id="computerEditForm" #computerEditForm="ngForm">
   <div class="d-flex flex-row mt-5 mb-5">
     <div>
@@ -7,31 +7,31 @@
           <h3>General Information</h3>
           <mat-form-field>
             <mat-label>Name</mat-label>
-            <input matInput placeholder="Unknown" value="{{computer.name}}">
+            <input id="name" name="name" [(ngModel)]="computer.name" matInput placeholder="Unknown">
           </mat-form-field>
           <mat-form-field>
             <mat-label>Serialnumber</mat-label>
-            <input matInput placeholder="Unknown" value="{{computer.serial_number}}">
+            <input id="serial_number" name="serial_number" [(ngModel)]="computer.serial_number" matInput placeholder="Unknown">
           </mat-form-field>
           <mat-form-field>
             <mat-label>Status</mat-label>
-            <mat-select [(value)]="selectedStatus">
+            <mat-select [formControl]="statusControl">
               <mat-option *ngFor="let status of statusOptions" [value]="status">
                 {{ status }}
               </mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field>
-            <mat-label>Status</mat-label>
-            <mat-select [(value)]="selectedOperationalStatus">
+            <mat-label>Operational Status</mat-label>
+            <mat-select [formControl]="operationalStatusControl">
               <mat-option *ngFor="let operationalStatus of operationalStatusOptions" [value]="operationalStatus">
                 {{ operationalStatus }}
               </mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field>
-            <mat-label>Status</mat-label>
-            <mat-select [(value)]="selectedOperationalImpact">
+            <mat-label>Operational Impact</mat-label>
+            <mat-select [formControl]="operationalImpactControl">
               <mat-option *ngFor="let operationalImpact of operationalImpactOptions" [value]="operationalImpact">
                 {{ operationalImpact }}
               </mat-option>
@@ -46,15 +46,15 @@
           <h3>Proprietor</h3>
           <mat-form-field>
             <mat-label>Organizationalunit</mat-label>
-            <input matInput placeholder="Unknown" value="{{computer.organizational_unit}}">
+            <input id="organizational_unit" name="organizational_unit" [(ngModel)]="computer.organizational_unit" matInput placeholder="Unknown">
           </mat-form-field>
           <mat-form-field>
             <mat-label>Costcentre</mat-label>
-            <input matInput placeholder="Unknown" value="{{computer.cost_centre}}">
+            <input id="cost_centre" name="cost_centre" [(ngModel)]="computer.cost_centre" matInput placeholder="Unknown">
           </mat-form-field>
           <mat-form-field>
             <mat-label>location</mat-label>
-            <input matInput placeholder="Unknown" value="{{computer.location}}">
+            <input id="location" name="location" [(ngModel)]="computer.location" matInput placeholder="Unknown">
           </mat-form-field>
           <mat-form-field class="form-group col">
             <mat-label>Owner</mat-label>
@@ -73,8 +73,8 @@
             </mat-autocomplete>
           </mat-form-field >
           <mat-form-field>
-            <mat-label>Status</mat-label>
-            <mat-select [(value)]="selectedProperty">
+            <mat-label>Property</mat-label>
+            <mat-select [formControl]="propertyControl">
               <mat-option *ngFor="let property of propertyOptions" [value]="property">
                 {{ property }}
               </mat-option>
@@ -89,15 +89,15 @@
           <h3>Inventory</h3>
           <mat-form-field>
             <mat-label>Inventorynumber</mat-label>
-            <input matInput placeholder="Unknown" value="{{computer.inventory_number}}">
+            <input id="inventory_number" name="inventory_number" [(ngModel)]="computer.inventory_number" matInput placeholder="Unknown">
           </mat-form-field>
           <mat-form-field>
             <mat-label>Inventoryitem</mat-label>
-            <input matInput placeholder="Unknown" value="{{computer.inventory_item}}">
+            <input id="inventory_item" name="inventory_item" [(ngModel)]="computer.inventory_item" matInput placeholder="Unknown">
           </mat-form-field>
           <mat-form-field>
             <mat-label>End Of Operation</mat-label>
-            <input matInput [matDatepicker]="picker" [value]="endOfOperation">
+            <input id="end_of_operation" name="end_of_operation" matInput [matDatepicker]="picker" [value]="endOfOperation" (dateChange)="onEndOfOperationChange($event)">
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
@@ -111,11 +111,11 @@
         <h3>Identification</h3>
         <mat-form-field>
           <mat-label>Domain</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.domain}}">
+          <input id="domain" name="domain" [(ngModel)]="computer.domain" matInput placeholder="Unknown">
         </mat-form-field>
         <mat-form-field>
           <mat-label>Account Status</mat-label>
-          <mat-select [(value)]="selectedAccountStatus">
+          <mat-select [formControl]="accountStatusControl">
             <mat-option *ngFor="let accountStatus of accountStatusOptions" [value]="accountStatus">
               {{ accountStatus }}
             </mat-option>
@@ -123,23 +123,23 @@
         </mat-form-field>
         <mat-form-field>
           <mat-label>DNS-Name</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.dns_name}}">
+          <input id="dns_name" name="dns_name" [(ngModel)]="computer.dns_name" matInput placeholder="Unknown">
         </mat-form-field>
         <mat-form-field>
           <mat-label>DNS-Server</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.dns_server}}">
+          <input id="dns_server" name="dns_server" [(ngModel)]="computer.dns_server" matInput placeholder="Unknown">
         </mat-form-field>
         <mat-form-field>
           <mat-label>Standard Gateway</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.standard_gateway}}">
+          <input id="standard_gateway" name="standard_gateway" [(ngModel)]="computer.standard_gateway" matInput placeholder="Unknown">
         </mat-form-field>
         <mat-form-field>
           <mat-label>IP-Address</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.ip_address}}">
+          <input id="ip_address" name="ip_address" [(ngModel)]="computer.ip_address" matInput placeholder="Unknown">
         </mat-form-field>
         <mat-form-field>
           <mat-label>IP-v6-Address</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.ip_v6_address}}">
+          <input id="ip_v6_address" name="ip_v6_address" [(ngModel)]="computer.ip_v6_address" matInput placeholder="Unknown">
         </mat-form-field>
       </mat-card-content>
     </mat-card>
@@ -150,25 +150,25 @@
         <h3>Hardware</h3>
         <mat-form-field>
           <mat-label>Manufacturer</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.manufacturer}}">
+          <input id="manufacturer" name="manufacturer" [(ngModel)]="computer.manufacturer" matInput placeholder="Unknown">
         </mat-form-field>
         <mat-form-field>
           <mat-label>Model</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.model}}">
+          <input id="model" name="model" [(ngModel)]="computer.model" matInput placeholder="Unknown">
         </mat-form-field>
         <mat-form-field>
           <mat-label>Year Of Manufacturer</mat-label>
-          <input matInput [matDatepicker]="picker" [value]="yearOfManufacture">
-          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
+          <input id="year_of_manufacture" name="year_of_manufacture" matInput [matDatepicker]="picker1" [value]="yearOfManufacture" (dateChange)="onYearOfManufactureChange($event)">
+          <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+          <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
         <mat-form-field>
           <mat-label>Processor</mat-label>
-          <input matInput placeholder="Unknown" value="{{computer.processor}}">
+          <input id="processor" name="processor" [(ngModel)]="computer.processor" matInput placeholder="Unknown">
         </mat-form-field>
         <mat-form-field>
-          <mat-label>Account Status</mat-label>
-          <mat-select [(value)]="selectedOperationSystem">
+          <mat-label>Operation System</mat-label>
+          <mat-select [formControl]="operationSystemControl">
             <mat-option *ngFor="let operationSystem of operationSystemOptions" [value]="operationSystem">
               {{ operationSystem }}
             </mat-option>
@@ -176,5 +176,10 @@
         </mat-form-field>
       </mat-card-content>
     </mat-card>
+  </div>
+  <div class="d-flex justify-content-between">
+    <button id="okay-button" type="submit" (click)="onEditComputer(computerEditForm); goBack()">Okay</button>
+    <button id="save-button" type="button" (click)="onEditComputer(computerEditForm)">Save</button>
+    <button id="cancel-button" (click)="goBack()">Cancel</button>
   </div>
 </form>
