Many Quality of Life Changes. Added Base-Data Component. Added Owner Component. Added Tutorial Component. Deleted Computer-Info Component. Added Dropdown to select Current Asset

--- a/src/app/demo/asset-manager/asset-manager.component.html
+++ b/src/app/demo/asset-manager/asset-manager.component.html
@@ -1,7 +1,9 @@
-<p class="text-white text-center" style="margin-top: 100px">Asset Manager!</p>
-<div class="container" style="height: 800px">
+<p class="text-white text-center" style="padding-top: 80px">
+  Asset Manager!
+</p>
+<div class="container">
   <app-asset-manager-navbar></app-asset-manager-navbar>
-  <mat-sidenav-container class="bg-light text-black" style="height: 800px">
+  <mat-sidenav-container class="bg-light text-black" style="height: 740px">
     <mat-sidenav #sidenav style="background-color:#393d4f !important;" position="start" mode="side">
       <app-asset-manager-navbar-options></app-asset-manager-navbar-options>
     </mat-sidenav>
