--- a/src/app/demo/asset-manager/navbar/navbar.component.html
+++ b/src/app/demo/asset-manager/navbar/navbar.component.html
@@ -6,19 +6,24 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="nav-link mx-4" style="color: orange" routerLink="home">HOME</a>
+        <a class="nav-link mx-3" style="color: darkblue;font-weight: bold" routerLink="help">HELP</a>
       </div>
       <div>
         <div class="justify-content-end">
           <div class="container row">
-            <div class="col-4">
+            <div class="col-4 d-flex align-items-center">
               <a class="nav-link text-white" href="/asset-manager">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search mx-2" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                 </svg>
               </a>
             </div>
-            <div class="col-4">
-              <a class="nav-link text-white" routerLink="assets">Assets</a>
+            <div class="col-4 d-flex align-items-center">
+              <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+              <mat-menu #menu="matMenu">
+                <a mat-menu-item class="nav-link text-white" routerLink="assets">Assets</a>
+                <a mat-menu-item class="nav-link text-white" routerLink="base-data">Base Data</a>
+              </mat-menu>
             </div>
             <div class="col-4 text-white" >
               <button mat-button (click)="addAssetClick()" type="button">
