--- a/src/app/demo/asset-manager/navbar/navbar.component.html
+++ b/src/app/demo/asset-manager/navbar/navbar.component.html
@@ -5,8 +5,8 @@
         <button class="navbar-toggler" mat-button (click)="moreOptionsClick()" type="button">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="nav-link mx-4" style="color: orange" routerLink="home">HOME</a>
-        <a class="nav-link mx-3" style="color: darkblue;font-weight: bold" routerLink="help">HELP</a>
+        <a class="nav-link mx-4 text-light" routerLink="home">Home</a>
+        <a class="nav-link mx-3 text-light" routerLink="help">Help</a>
       </div>
       <div>
         <div class="justify-content-end">
