--- a/src/app/demo/asset-manager/navbar/navbar.component.html
+++ b/src/app/demo/asset-manager/navbar/navbar.component.html
@@ -11,21 +11,23 @@
       <div>
         <div class="justify-content-end">
           <div class="container row">
-            <div class="col-4 d-flex align-items-center">
-              <a class="nav-link text-white" href="/asset-manager">
+            <div class="col-8 d-flex align-items-center justify-content-end flex-row px-5">
+              <span class="text-light">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search mx-2" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                 </svg>
-              </a>
+              </span>
+              <input type="search" (keyup)="search(key.value)" #key="ngModel" ngModel name="key" id="search">
             </div>
-            <div class="col-4 d-flex align-items-center">
+            <div class="col-1"></div>
+            <div class="col-2 d-flex align-items-center">
               <button mat-button [matMenuTriggerFor]="menu">Menu</button>
               <mat-menu #menu="matMenu">
                 <a mat-menu-item class="nav-link text-white" routerLink="assets">Assets</a>
                 <a mat-menu-item class="nav-link text-white" routerLink="base-data">Base Data</a>
               </mat-menu>
             </div>
-            <div class="col-4 text-white" >
+            <div class="col-1 text-white">
               <button mat-button (click)="addAssetClick()" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                   <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
