Added Chart.js Library. Added two Charts for status and operating system of all computers

--- a/src/app/demo/asset-manager/content/home/home.component.html
+++ b/src/app/demo/asset-manager/content/home/home.component.html
@@ -1,1 +1,8 @@
-<p>asset-manager-home works!</p>
+<div class="d-flex flex-row justify-content-between align-items-center">
+  <div class="chart-container">
+    <canvas style="height:200px" id="ChartOS">{{ chartOS }}</canvas>
+  </div>
+  <div class="chart-container">
+    <canvas style="height:200px" id="ChartStatus">{{ chartStatus }}</canvas>
+  </div>
+</div>
