Bug Fixes. Added another chart to display Computer Stock

--- a/src/app/demo/asset-manager/content/home/home.component.html
+++ b/src/app/demo/asset-manager/content/home/home.component.html
@@ -1,8 +1,11 @@
-<div class="d-flex flex-row justify-content-between align-items-center">
+<div class="d-flex flex-row justify-content-between align-items-center mb-5 pt-2">
   <div class="chart-container">
     <canvas style="height:200px" id="ChartOS">{{ chartOS }}</canvas>
   </div>
   <div class="chart-container">
     <canvas style="height:200px" id="ChartStatus">{{ chartStatus }}</canvas>
   </div>
+</div>
+<div class="chart-container pb-5">
+  <canvas style="height:200px" id="ChartComputerStock">{{ chartComputerStock }}</canvas>
 </div>
