Updated Picture for Asset-Manager-Demo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-4 p-0">
       <a routerLink="/asset-manager">
-        <img src="/assets/Test1.png" class="img-fluid x-axis-scale">
+        <img src="/assets/asset-manager-demo.png" class="img-fluid x-axis-scale">
       </a>
     </div>
     <div class="col-lg-4 p-0"><img src="/assets/Test1.png" class="img-fluid x-axis-scale"></div>
