--- a/src/app/demo/asset-manager/content/home/home.component.html
+++ b/src/app/demo/asset-manager/content/home/home.component.html
@@ -1,18 +1,18 @@
-<div class="d-flex flex-row justify-content-between align-items-center mb-5 pt-2">
-  <div class="chart-container">
+<div id="test" class="d-flex gap-3 flex-row align-items-center mt-3 mb-5 pt-2">
+  <div class="diagram chart-container">
     <canvas style="height:200px" id="ChartOS">{{ chartOS }}</canvas>
   </div>
-  <div class="chart-container">
+  <div class="diagram chart-container">
     <canvas style="height:200px" id="ChartStatus">{{ chartStatus }}</canvas>
   </div>
 </div>
-<div class="chart-container pb-5 mb-3">
+<div class="diagram chart-container pb-5 mb-3">
   <canvas style="height:200px" id="ChartComputerStock">{{ chartComputerStock }}</canvas>
 </div>
-<div class="chart-container pb-5 d-flex justify-content-center align-items-center" style="height: 600px">
+<div class="diagram chart-container pb-5 d-flex justify-content-center align-items-center" style="height: 600px">
   <canvas id="ChartCustom">{{ chartCustom }}</canvas>
 </div>
-<div class="w-50 m-auto">
+<div class="diagram w-50 m-auto">
   <mat-form-field class="d-flex justify-content-center align-items-center flex-column pb-5">
     <mat-label class="text-center">Select Data you want to see</mat-label>
     <mat-select (valueChange)="changeOption()" [(value)]="selected">
